[package]
name = "pontjes"
version = "0.0.1"
authors = ["swapsCAPS <verstegen.daan@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"] }
chrono = "0.4"
itertools = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "serve", "diesel_sqlite_pool"]
