[package]
name = "pontjes"
version = "0.0.1"
authors = ["swapsCAPS <verstegen.daan@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
chrono-tz = "0.5"
itertools = "0.9.0"
libsqlite3-sys = { version = "0.9.1", features = [ "bundled" ] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates", "serve", "sqlite_pool"]

