[package]
name = "pontjes"
version = "0.0.1"
authors = ["swapsCAPS <verstegen.daan@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
chrono-tz = "0.5"
itertools = "0.9.0"
# libsqlite3-sys = { version = "0.9.1", features = [ "bundled" ] }
log = "0.4"
pretty_env_logger = "0.4"
lazy_static = "1.4.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool", "sqlite_pool"]

